<resources>
    <string name="app_name">Parstagram</string>
    <string name="etUsername_hint">Username</string>
    <string name="etPassword_hint">Password</string>
    <string name="btLogin_text">Log In</string>
    <string name="btTakePicture_text">Take Picture</string>
    <string name="btSubmit_text">Submit</string>
    <string name="etCaption_hint">Caption</string>
    <string name="action_profile_title">Profile</string>
    <string name="action_create_title">Create</string>
    <string name="action_home_title">Home</string>
    <string name="post_image">post image</string>
    <string name="btLogout_text">Logout</string>
    <string name="tvSignUp_text">Sign up</string>
    <string name="facebook_app_id">598122617803842</string>
    <string name="fb_login_protocol_scheme">fb598122617803842</string>

</resources>